--- a/video_chatting_app.ipynb
+++ b/video_chatting_app.ipynb
@@ -18,12 +18,12 @@
     "pn=socket.SOCK_DGRAM\n",
     "s=socket.socket(afn,pn)\n",
     "\n",
-    "ip1=\"192.168.1.5\"\n",
-    "port1=4321\n",
+    "ip1=\"IP for Recive\"\n",
+    "port1=Recive port no.\n",
     "\n",
-    "ip2=\"192.168.1.22\"\n",
+    "ip2=\"IP for send \"\n",
     "\n",
-    "port2=1234\n",
+    "port2=Send Port\n",
     "    \n",
     "def reciever():\n",
     "    s.bind((ip1,port1))\n",
